<resources>
    <string name="app_name">GPdI Hagios Family</string>
    <string name="keluar">Keluar</string>
    <string name="yakin_ingin_keluar">Yakin ingin keluar?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="jadwal_ibadah">Jadwal Ibadah</string>
    <string name="alkitab">Alkitab</string>
    <string name="kitab">Kitab</string>
    <string name="pasal">Pasal</string>
    <string name="event">Acara</string>
    <string name="attendance">Kehadiran</string>
    <string name="delete">Hapus</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="yakin_ingin_hapus">Yakin ingin menghapus data?</string>
    <string name="add_event">Tambah Kegiatan</string>
    <string name="permintaan_doa">Permintaan Doa</string>
    <string name="prayer_list">Daftar Permintaan Doa</string>
    <string name="letters_request">Permintaan Dokumen</string>
    <string name="surat_babtis">Surat Babtis</string>
    <string name="surat_pernikahan">Surat Pernikahan</string>
    <string name="surat_keterangan_anggota_jemaat">Surat Keterangan Anggota Jemaat</string>
    <string name="surat_keterangan_kematian">Surat Keterangan Kematian</string>
    <string name="surat_ijin_penggunaan_fasilitas_gereja">Surat Ijin Penggunaan Fasilitas Gereja</string>
    <string name="daftar_permintaan_dokumen">Daftar Permintaan Dokumen</string>
    <string name="history">History</string>
    <string name="belum_ada_permaintaan_doa">Belum ada permaintaan doa</string>
    <string name="belum_ada_permaintaan_dokumen">Belum ada permaintaan dokumen</string>
    <string name="belum_ada_data_kehadiran">Belum ada data kehadiran</string>
    <string name="belum_data_kegiatan">Belum data kegiatan</string>
    <string name="buat_permintaan">Buat Permintaan</string>
    <string name="yakin_ingin_mengirim_permintaan_doa">Yakin ingin mengirim permintaan doa ini?</string>
    <string name="yakin_ingin_mengirim_permintaan_dokumen">Yakin ingin mengirim permintaan dokumen</string>
    <string name="data_tidak_boleh_kosong">Data tidak boleh kosong</string>
    <string name="nama_kegiatan_tidak_boleh_kosong">Nama kegiatan tidak boleh kosong</string>
    <string name="tanggal_kegiatan_tidak_boleh_kosong">Tanggal kegiatan tidak boleh kosong</string>
    <string name="edit">Edit</string>
    <string name="edit_kegiatan">Edit Kegiatan</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="edit_data">Edit Data</string>
    <string name="absen">Absen</string>
</resources>