<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.document.DocReqActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/maroon"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:background="@drawable/icon_back"
                android:button="@android:color/transparent" />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/letters_request"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_margin="@dimen/margin_layout_with_ds"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textStyle="bold"
            style="@style/TitleText"
            android:text="Tipe surat:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:layout_marginTop="@dimen/margin_item_with_ds"
            android:id="@+id/rg_letters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/surat_babtis"
                android:id="@+id/rb_surat_babtis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/surat_pernikahan"
                android:id="@+id/rb_surat_pernikahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/surat_keterangan_anggota_jemaat"
                android:id="@+id/rb_surat_anggota_jemaat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/surat_keterangan_kematian"
                android:id="@+id/rb_surat_kematian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/surat_ijin_penggunaan_fasilitas_gereja"
                android:id="@+id/rb_surat_ijin_fasilitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/test"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_start_end"
                android:text="Tanggal maksimum surat dikirim: "
                android:textStyle="bold" />


            <EditText
                android:layout_marginTop="@dimen/margin_item_with_ds"
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_marginTop="@dimen/margin_start_end"
                android:text="Kirim"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:backgroundTint="@color/maroon"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_history"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:backgroundTint="@color/maroon"
        android:text="History"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>